# epp-example-external-usage

./: .env.example  .gitignore  README.md  config.toml  main.py  pyproject.toml
config/: config.toml.example
examples/: 01_basic_goal_seek.py  02_custom_accu_volumes.py  03_batch_analysis.py  04_full_model_run.py  EPP_Examples.ipynb  EPP_Metrics_Advanced.ipynb  EPP_Project_Scenarios.ipynb
