[project]
name = "epp-example-external-usage"
version = "0.1.0"
description = "Example external project using EPP Screening Model package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Additional dependencies for examples
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "epp-screening-model-v3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ipython>=8.0.0",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
epp-screening-model-v3 = { git = "https://github.com/MullionGroup/epp_screening_model_v3.git", rev = "v1.0.9" }
# EPP Screening Model from GitHub
# Install using: uv add git+https://github.com/MullionGroup/epp_screening_model_v3.git
# See README.md for authentication options
